# Motherfudder

./: Guide.txt  README.md  Refud.txt
MfBuilder/: Cargo.toml  build.json
MfBuilder/MfRunner/: Config.cs  MfRunner.csproj  MfRunner.sln  Program.cs
MfBuilder/MfRunner/Anti/: AntiCIS.cs  AntiDebug.cs  AntiVM.cs  CrashExit.cs
MfBuilder/MfRunner/Crypto/: DeriveKey.cs  RC4.cs  StringHasher.cs
MfBuilder/MfRunner/Native/: GetFunctionAddress.cs  NativeFunctions.cs
MfBuilder/MfRunner/Native/IndirectSyscalls/: GetSSN.cs  IndirectSyscalls.cs
MfBuilder/MfRunner/Patches/: CopyFunction.cs  PatchAMSI.cs  PatchDotNetAMSI.cs  PatchETW.cs
MfBuilder/MfRunner/Properties/: AssemblyInfo.cs
MfBuilder/MfRunner/Utilities/: PayloadDownloader.cs  RandomString.cs  SingleInstance.cs  UacBypass.cs
MfBuilder/MfRunner/Utilities/Persistance/: Persistance.cs  SchtasksTemplateAdmin.cs  SchtasksTemplateUser.cs  StartupCommand.cs
MfBuilder/src/: binary_arch.rs  build_dotnet.rs  build_native.rs  dir_utils.rs  main.rs  mf_runner.rs  random.rs
MfBuilder/src/builders/: batch.rs  exe.rs  mod.rs
MfBuilder/src/crypto/: cipher_3des.rs  cipher_rc4.rs  derive_key.rs  mod.rs
MfBuilder/src/obf_batch/: mod.rs  obf_pseudo_batcloak.rs
MfBuilder/src/templates/: mod.rs  template.ps1
MfObfDotNet/: FodyWeavers.xml  MfObfDotNet.csproj  MfObfDotNet.sln  Program.cs  WordList.txt  packages.config
MfObfDotNet/MfObfDotNet/: AttributesModifier.cs  Random.cs  RandomizeOrder.cs  WordList.cs
MfObfDotNet/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
(+11 files in other folders)
