[package]
name = "MfBuilder"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.140"
des = "0.8.1"
uuid = {version = "1.16.0", features = ["v4"]}
rand = "0.8.5"
sha2 = "0.10.8"
colored = "3.0.0"
hex = "0.4.3"
reqwest = {version = "0.12.15", features = ["blocking"]}
flate2 = "1.1.1"
base64 = "0.22.1"
goblin = "0.9.3"